// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article Byline test on web renders correctly with a section colour 1`] = `
<a
  dir="auto"
  href="/profile/alexandra-frean"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="link"
  style={
    Object {
      "color": "blue",
    }
  }
>
  Alexandra Frean
</a>
`;

exports[`Article Byline test on web renders correctly with a single author 1`] = `
<a
  dir="auto"
  href="/profile/alexandra-frean"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="link"
  style={
    Object {
      "color": "rgba(105,105,105,1)",
    }
  }
>
  Alexandra Frean
</a>
`;

exports[`Article Byline test on web renders correctly with a single inline element 1`] = `
<div
  dir="auto"
  style={
    Object {
      "color": "rgba(105,105,105,1)",
    }
  }
>
  Lindsay McIntosh Scottish Political Editor
</div>
`;

exports[`Article Byline test on web renders correctly with an empty AST (empty byline on DB) 1`] = `null`;

exports[`Article Byline test on web renders correctly with multiple authors separated by spaces 1`] = `
Array [
  <a
    dir="auto"
    href="/profile/camilla-long"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="link"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    Camilla Long
  </a>,
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
     
  </div>,
  <a
    dir="auto"
    href="/profile/mike-atherton"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="link"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    Mike Atherton
  </a>,
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
     
  </div>,
  <a
    dir="auto"
    href="/profile/alexandra-frean"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="link"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    Alexandra Frean
  </a>,
]
`;

exports[`Article Byline test on web renders correctly with multiple authors separated by text with commas 1`] = `
Array [
  <a
    dir="auto"
    href="/profile/camilla-long"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="link"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    Camilla Long
  </a>,
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    , 
  </div>,
  <a
    dir="auto"
    href="/profile/mike-atherton"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="link"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    Mike Atherton
  </a>,
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    , 
  </div>,
  <a
    dir="auto"
    href="/profile/alexandra-frean"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="link"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    Alexandra Frean
  </a>,
]
`;

exports[`Article Byline test on web renders correctly with styles 1`] = `
<a
  dir="auto"
  href="/profile/alexandra-frean"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="link"
  style={
    Object {
      "color": "red",
    }
  }
>
  Alexandra Frean
</a>
`;

exports[`Article Byline test on web renders correctly with the author at the end 1`] = `
Array [
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    RBS Six Nations 
  </div>,
  <a
    dir="auto"
    href="/profile/mike-atherton"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="link"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    Mike Atherton
  </a>,
]
`;

exports[`Article Byline test on web renders correctly with the author in the begining 1`] = `
Array [
  <a
    dir="auto"
    href="/profile/camilla-long"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="link"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    Camilla Long
  </a>,
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    , Environment Editor
  </div>,
]
`;
